--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="https://cse.buffalo.edu/~jinhui/" target="_blank">Prof. Jinhui Xu</a> and
                     <a href="https://cse.buffalo.edu/~changyou/" target="_blank">Prof. Changyou Chen</a>.
 <!--                    <br>-->
-                    I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
+                    I received my B.E. degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
                     <br>
                     I'm broadly interested in machine learning and deep learning.<br>
                     Currently, I'm using deep learning methods to learn 'better' kernels, and utilizing them in deep generative models, meta-learning, etc.<br>
@@ -42,31 +42,13 @@
                 </p>
 
             <hr>
-<!--            <div class="section-heading"><h2>News</h2></div>-->
-<!--                <ul>-->
-<!--                    <li>-->
-<!--                        <div class="news"> Two papers got accepted by <b>ICLR</b>, 2021.</div>-->
-<!--                    </li>-->
 
-<!--                    <li>-->
-<!--                        <div class="news"> One paper got accepted by <b>NeurIPS</b>, 2020.</div>-->
-<!--                    </li>-->
-
-<!--                    <li>-->
-<!--                        <div class="news"> One paper got accepted by <b>ISBI</b>, 2020.</div>-->
-<!--                    </li>-->
-
-<!--                    <li>-->
-<!--                        <div class="news"> Two papers got accepted by <b>AAAI</b>, 2020.</div>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            <hr>-->
             <div class="section-heading"><h2>Publications</h2></div>
                 <ol>
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Meta-Learning with Neural Tangent Kernels </div>
+                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2102.03909.pdf"  target="_blank"> Meta-Learning with Neural Tangent Kernels</a></div>
                             <div class="authors"> <b>Yufan Zhou*</b>, Zhenyi Wang*, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
@@ -76,7 +58,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> MixKD: Towards Efficient Distillation of Large-scale Language Models</div>
+                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2011.00593.pdf"  target="_blank"> MixKD: Towards Efficient Distillation of Large-scale Language Models</a></div>
                             <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
@@ -86,7 +68,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Learning Manifold Implicitly via Explicit Heat Kernel Learning</div>
+                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2010.01761.pdf"  target="_blank">Learning Manifold Implicitly via Explicit Heat Kernel Learning</a></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
                             <div class="venue"> <i> Thirty-fourth Conference on Neural Information Processing Systems</i> (<b>NeurIPS</b>), 2020.</div>
                         </div>
@@ -95,7 +77,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Weakly-supervised Brain Tumor Classification with Global Diagnosis Label <font color="#FF0000">(Oral)</font> </div>
+                            <div class="title"><text id="small-caps"> <a href="https://ieeexplore.ieee.org/document/9098640"  target="_blank">Weakly-supervised Brain Tumor Classification with Global Diagnosis Label</a> <font color="#FF0000">(Oral)</font> </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Chunwei Ma, Mingchen Gao, Changyou Chen, Hong Zhu, Jinhui Xu.</div>
                             <div class="venue"> <i> IEEE International Symposium on Biomedical Imaging </i> (<b>ISBI</b>), 2020.</div>
                         </div>
@@ -104,7 +86,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Variational Adversarial Kernel Learned Imitation Learning <font color="#FF0000">(Spotlight)</font></div>
+                            <div class="title"><text id="small-caps"> <a href="https://ojs.aaai.org//index.php/AAAI/article/view/6135"  target="_blank">Variational Adversarial Kernel Learned Imitation Learning</a> <font color="#FF0000">(Spotlight)</font></div>
                             <div class="authors"> Fan Yang, Alina Vereshchaka, <b>Yufan Zhou</b>, Changyou Chen, Wen Dong.</div>
                             <div class="venue"> <i> AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2020.</div>
                         </div>
@@ -113,7 +95,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions <font color="#FF0000">(Spotlight)</font> </div>
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/1912.10150.pdf"  target="_blank">Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions</a> <font color="#FF0000">(Spotlight)</font> </div>
                             <div class="authors">Zhenyi Wang, Ping Yu, Yang Zhao, Ruiyi Zhang, <b>Yufan Zhou</b>, Junsong Yuan, Changyou Chen.</div>
                             <div class="venue"> <i> AAAI conference on Artificial Intelligence </i>  (<b>AAAI</b>), 2020.</div>
                         </div>
@@ -122,7 +104,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Holistic Brain Tumor Screening and Classification Based on DenseNet and Recurrent Neural Network </div>
+                            <div class="title"><text id="small-caps"> <a href="https://cse.buffalo.edu/~mgao8/files/2018_BrainLes.pdf">Holistic Brain Tumor Screening and Classification Based on DenseNet and Recurrent Neural Network</a> </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Hong Zhu, Changyou Chen, Mingchen Gao, Kai Xu, Jinhui Xu.</div>
                             <div class="venue"> <i> International Conference on Medical Image Computing and Computer Assisted Intervention, Brain Lesion Workshop </i> (<b>BrainLes</b>, <b>MICCAI</b>), 2018.</div>
                         </div>
@@ -170,10 +152,6 @@
                     <li>
                         IJCAI 2021;
                     </li>
-<!--                    <li>-->
-<!--                        I also reviewed papers or served as Review Assistant for:-->
-<!--                        ICML 2019, IJCAI 2019, UAI 2019, NeurIPS 2019, AAAI 2020, ICLR 2020, ICML 2020, UAI 2020, ECML 2020.-->
-<!--                    </li>-->
 
 
                 </ul>
