--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
 
             <hr>
-            <div class="section-heading"><h2>Professional Activities</h2></div>
+            <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     Program Committee/Reviewer:
                     <li>
