--- a/index.html
+++ b/index.html
@@ -137,23 +137,11 @@
             <hr>
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
-                    Program Committee/Reviewer:
                     <li>
-                        NeurIPS 2020;
-                    </li>
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021; ICML 2021; AISTATS 2021; AAAI 2021; IJCAI 2021;
                     <li>
-                        ICML 2021;
+                        Journal Reviewer: IEEE TNNLS;
                     </li>
-                    <li>
-                        AISTATS 2021;
-                    </li>
-                    <li>
-                        AAAI 2021;
-                    </li>
-                    <li>
-                        IJCAI 2021;
-                    </li>
-
 
                 </ul>
     </body>
