--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2102.03909.pdf"  target="_blank"> Meta-Learning with Neural Tangent Kernels</a></div>
+                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2102.03909.pdf"  target="_blank"> Meta-Learning with Neural Tangent Kernels</a></text></div>
                             <div class="authors"> <b>Yufan Zhou*</b>, Zhenyi Wang*, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
@@ -59,7 +59,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2011.00593.pdf"  target="_blank"> MixKD: Towards Efficient Distillation of Large-scale Language Models</a></div>
+                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2011.00593.pdf"  target="_blank"> MixKD: Towards Efficient Distillation of Large-scale Language Models</a></text></div>
                             <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
@@ -69,7 +69,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2010.01761.pdf"  target="_blank">Learning Manifold Implicitly via Explicit Heat Kernel Learning</a></div>
+                            <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2010.01761.pdf"  target="_blank">Learning Manifold Implicitly via Explicit Heat Kernel Learning</a></text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
                             <div class="venue"> <i> Thirty-fourth Conference on Neural Information Processing Systems</i> (<b>NeurIPS</b>), 2020.</div>
                         </div>
@@ -78,7 +78,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://ieeexplore.ieee.org/document/9098640"  target="_blank">Weakly-supervised Brain Tumor Classification with Global Diagnosis Label</a> <font color="#FF0000">(Oral)</font> </div>
+                            <div class="title"><text id="small-caps"> <a href="https://ieeexplore.ieee.org/document/9098640"  target="_blank">Weakly-supervised Brain Tumor Classification with Global Diagnosis Label</a> <font color="#FF0000">(Oral)</font></text> </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Chunwei Ma, Mingchen Gao, Changyou Chen, Hong Zhu, Jinhui Xu.</div>
                             <div class="venue"> <i> IEEE International Symposium on Biomedical Imaging </i> (<b>ISBI</b>), 2020.</div>
                         </div>
@@ -87,7 +87,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://ojs.aaai.org//index.php/AAAI/article/view/6135"  target="_blank">Variational Adversarial Kernel Learned Imitation Learning</a> <font color="#FF0000">(Spotlight)</font></div>
+                            <div class="title"><text id="small-caps"> <a href="https://ojs.aaai.org//index.php/AAAI/article/view/6135"  target="_blank">Variational Adversarial Kernel Learned Imitation Learning</a> <font color="#FF0000">(Spotlight)</font></text></div>
                             <div class="authors"> Fan Yang, Alina Vereshchaka, <b>Yufan Zhou</b>, Changyou Chen, Wen Dong.</div>
                             <div class="venue"> <i> AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2020.</div>
                         </div>
@@ -96,7 +96,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/1912.10150.pdf"  target="_blank">Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions</a> <font color="#FF0000">(Spotlight)</font> </div>
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/1912.10150.pdf"  target="_blank">Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions</a> <font color="#FF0000">(Spotlight)</font></text> </div>
                             <div class="authors">Zhenyi Wang, Ping Yu, Yang Zhao, Ruiyi Zhang, <b>Yufan Zhou</b>, Junsong Yuan, Changyou Chen.</div>
                             <div class="venue"> <i> AAAI conference on Artificial Intelligence </i>  (<b>AAAI</b>), 2020.</div>
                         </div>
@@ -105,7 +105,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://cse.buffalo.edu/~mgao8/files/2018_BrainLes.pdf">Holistic Brain Tumor Screening and Classification Based on DenseNet and Recurrent Neural Network</a> </div>
+                            <div class="title"><text id="small-caps"> <a href="https://cse.buffalo.edu/~mgao8/files/2018_BrainLes.pdf">Holistic Brain Tumor Screening and Classification Based on DenseNet and Recurrent Neural Network</a> </text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Hong Zhu, Changyou Chen, Mingchen Gao, Kai Xu, Jinhui Xu.</div>
                             <div class="venue"> <i> International Conference on Medical Image Computing and Computer Assisted Intervention, Brain Lesion Workshop </i> (<b>BrainLes</b>, <b>MICCAI</b>), 2018.</div>
                         </div>
@@ -119,7 +119,7 @@
                 <ol>
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</div>
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2105.04538"> Learning High-Dimensional Distributions with Latent Neural Fokker-Planck Kernels</a></text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
                         </div>
                     </li>
@@ -127,7 +127,15 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Graph Neural Networks with Composite Kernels</div>
+                            <div class="title"><text id="small-caps"> KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Graph Neural Networks with Composite Kernels</text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
                         </div>
                     </li>
