--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     I'm broadly interested in machine learning and deep learning.<br>
                     Currently, I'm using deep learning methods to construct and learn 'better' kernels, and utilizing them in deep generative models, meta-learning, energy-based models, etc.<br>
                     I`m also interested in Wasserstein Gradient Flow and Neural Tangent Kernel.<br>
-                    I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft Research, Summer 2020), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> and <a href = "https://gujiuxiang.com/"  target="_blank">Jiuxiang Gu</a> (Adobe Research, Summer 2021).
+                    I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft Research, Summer 2020), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> (Adobe Research, Summer 2021).
 <!--                    Here is my <a href="./CV.pdf">CV</a>.-->
                 </p>
 
