--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021; ICML 2021; AISTATS 2021; AAAI 2021; IJCAI 2021;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021; ICML 2021; ICLR 2022; AISTATS 2021; AAAI 2021; IJCAI 2021;
                     <li>
                         Journal Reviewer: IEEE TNNLS;
                     </li>
