--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
 
                     <li>
                         <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href = ""  target="_blank"> Interactive Image Generation with Natural-Language Feedback</a></text></div>
+                            <div class="authors"> Yufan Zhou, Ruiyi Zhang, Jiuxiang Gu, Chris Tensmeyer, Tong Yu, Changyou Chen, Jinhui Xu, Tong Sun
+                            <div class="venue"> <<i> Thirty-Sixth AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2022.</div>
+                        </div>
+                    </li>
+                    <br>
+
+
+                    <li>
+                        <div class="paper">
                             <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2102.03909.pdf"  target="_blank"> Meta-Learning with Neural Tangent Kernels</a></text></div>
                             <div class="authors"> <b>Yufan Zhou*</b>, Zhenyi Wang*, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
@@ -87,7 +97,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://ojs.aaai.org//index.php/AAAI/article/view/6135"  target="_blank">Variational Adversarial Kernel Learned Imitation Learning</a> <font color="#FF0000">(Spotlight)</font></text></div>
                             <div class="authors"> Fan Yang, Alina Vereshchaka, <b>Yufan Zhou</b>, Changyou Chen, Wen Dong.</div>
-                            <div class="venue"> <i> AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2020.</div>
+                            <div class="venue"> <i> Thirty-Forth AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2020.</div>
                         </div>
                     </li>
                     <br>
@@ -96,7 +106,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/1912.10150.pdf"  target="_blank">Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions</a> <font color="#FF0000">(Spotlight)</font></text> </div>
                             <div class="authors">Zhenyi Wang, Ping Yu, Yang Zhao, Ruiyi Zhang, <b>Yufan Zhou</b>, Junsong Yuan, Changyou Chen.</div>
-                            <div class="venue"> <i> AAAI conference on Artificial Intelligence </i>  (<b>AAAI</b>), 2020.</div>
+                            <div class="venue"> <i> Thirty-Forth AAAI conference on Artificial Intelligence </i>  (<b>AAAI</b>), 2020.</div>
                         </div>
                     </li>
                     <br>
@@ -115,6 +125,14 @@
             <hr>
             <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
                 <ol>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun
+                        </div>
+                    </li>
+                    <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2105.04538"> Learning High-Dimensional Distributions with Latent Neural Fokker-Planck Kernels</a></text></div>
@@ -144,7 +162,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021; ICML 2021; ICLR 2022; AISTATS 2021; AAAI 2021; IJCAI 2021;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021; ICML 2021; ICLR 2022; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021;
                     <li>
                         Journal Reviewer: IEEE TNNLS;
                     </li>
