--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href = ""  target="_blank"> Interactive Image Generation with Natural-Language Feedback</a></text></div>
                             <div class="authors"> Yufan Zhou, Ruiyi Zhang, Jiuxiang Gu, Chris Tensmeyer, Tong Yu, Changyou Chen, Jinhui Xu, Tong Sun
-                            <div class="venue"> <<i> Thirty-Sixth AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2022.</div>
+                            <div class="venue"> <i> Thirty-Sixth AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2022.</div>
                         </div>
                     </li>
                     <br>
@@ -128,7 +128,7 @@
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun. </div>
                         </div>
                     </li>
                     <br>
