--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href = ""  target="_blank"> Interactive Image Generation with Natural-Language Feedback</a></text></div>
-                            <div class="authors"> Yufan Zhou, Ruiyi Zhang, Jiuxiang Gu, Chris Tensmeyer, Tong Yu, Changyou Chen, Jinhui Xu, Tong Sun
+                            <div class="authors"> <b> Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Chris Tensmeyer, Tong Yu, Changyou Chen, Jinhui Xu, Tong Sun
                             <div class="venue"> <i> Thirty-Sixth AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2022.</div>
                         </div>
                     </li>
