--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Interactive Image Generation with Natural-Language Feedback</a></text></div>
+                            <div class="title"><text id="small-caps"> Interactive Image Generation with Natural-Language Feedback</text></div>
                             <div class="authors"> <b> Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Chris Tensmeyer, Tong Yu, Changyou Chen, Jinhui Xu, Tong Sun
                             <div class="venue"> <i> Thirty-Sixth AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2022.</div>
                         </div>
@@ -129,6 +129,14 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun. </div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> A Generic Approach for Enhancing GANs by Regularized Latent Optimization</text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Chunyuan Li, Changyou Chen, Jinhui Xu. </div>
                         </div>
                     </li>
                     <br>
