--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021; ICML 2021; ICLR 2022; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021; ICML 2021, 2022; ICLR 2022; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021;
                     <li>
                         Journal Reviewer: IEEE TNNLS;
                     </li>
