--- a/index.html
+++ b/index.html
@@ -44,12 +44,20 @@
 
             <div class="section-heading"><h2>Publications</h2></div>
                 <ol>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun. </div>
+                            <div class="venue"> <i> IEEE/CVF Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2022.</div>
+                        </div>
+                    </li>
+                    <br>
 
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Interactive Image Generation with Natural-Language Feedback</text></div>
-                            <div class="authors"> <b> Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Chris Tensmeyer, Tong Yu, Changyou Chen, Jinhui Xu, Tong Sun
-                            <div class="venue"> <i> Thirty-Sixth AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2022.</div>
+                            <div class="authors"> <b> Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Chris Tensmeyer, Tong Yu, Changyou Chen, Jinhui Xu, Tong Sun.</div>
+                            <div class="venue"> <i>  AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2022.</div>
                         </div>
                     </li>
                     <br>
@@ -59,7 +67,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2102.03909.pdf"  target="_blank"> Meta-Learning with Neural Tangent Kernels</a></text></div>
                             <div class="authors"> <b>Yufan Zhou*</b>, Zhenyi Wang*, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
-                            <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
+                            <div class="venue"> <i> International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
                     </li>
                     <br>
@@ -69,7 +77,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2011.00593.pdf"  target="_blank"> MixKD: Towards Efficient Distillation of Large-scale Language Models</a></text></div>
                             <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
-                            <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
+                            <div class="venue"> <i> International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
                     </li>
                     <br>
@@ -79,7 +87,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2010.01761.pdf"  target="_blank">Learning Manifold Implicitly via Explicit Heat Kernel Learning</a></text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
-                            <div class="venue"> <i> Thirty-fourth Conference on Neural Information Processing Systems</i> (<b>NeurIPS</b>), 2020.</div>
+                            <div class="venue"> <i> Conference on Neural Information Processing Systems</i> (<b>NeurIPS</b>), 2020.</div>
                         </div>
                     </li>
                     <br>
@@ -97,7 +105,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://ojs.aaai.org//index.php/AAAI/article/view/6135"  target="_blank">Variational Adversarial Kernel Learned Imitation Learning</a> <font color="#FF0000">(Spotlight)</font></text></div>
                             <div class="authors"> Fan Yang, Alina Vereshchaka, <b>Yufan Zhou</b>, Changyou Chen, Wen Dong.</div>
-                            <div class="venue"> <i> Thirty-Forth AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2020.</div>
+                            <div class="venue"> <i> AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2020.</div>
                         </div>
                     </li>
                     <br>
@@ -106,7 +114,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/1912.10150.pdf"  target="_blank">Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions</a> <font color="#FF0000">(Spotlight)</font></text> </div>
                             <div class="authors">Zhenyi Wang, Ping Yu, Yang Zhao, Ruiyi Zhang, <b>Yufan Zhou</b>, Junsong Yuan, Changyou Chen.</div>
-                            <div class="venue"> <i> Thirty-Forth AAAI conference on Artificial Intelligence </i>  (<b>AAAI</b>), 2020.</div>
+                            <div class="venue"> <i> AAAI conference on Artificial Intelligence </i>  (<b>AAAI</b>), 2020.</div>
                         </div>
                     </li>
                     <br>
@@ -125,13 +133,7 @@
             <hr>
             <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
                 <ol>
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun. </div>
-                        </div>
-                    </li>
-                    <br>
+
 
                     <li>
                         <div class="paper">
