--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun. </div>
-                            <div class="venue"> <i> IEEE/CVF Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2022.</div>
+                            <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2022.</div>
                         </div>
                     </li>
                     <br>
