--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     I received my B.E. degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
                     <br>
                     I'm broadly interested in machine learning and deep learning.<br>
-                    I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft Research, Summer 2020), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> (Adobe Research, Summer 2021).
+                    I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> (Adobe), Bingchen Liu (ByteDance).
 <!--                    Here is my <a href="./CV.pdf">CV</a>.-->
                 </p>
 
@@ -172,7 +172,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021; ICML 2021, 2022; ICLR 2022; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022; ICML 2021, 2022; ICLR 2022, 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022;
                     <li>
                         Journal Reviewer: IEEE TNNLS;
                     </li>
