--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
 
             <hr>
             <div class="section-heading"><h2>Bio</h2></div>
-                <p> I am a Ph.D. student (Fall 2018 - present) co-advised by
+                <p>
+                    I will join Adobe Research as a Research Scientist.
+                </p>
+                <p> I am currently a Ph.D. student (Fall 2018 - present) co-advised by
                     <a href="https://cse.buffalo.edu/~jinhui/" target="_blank">Prof. Jinhui Xu</a> and
                     <a href="https://cse.buffalo.edu/~changyou/" target="_blank">Prof. Changyou Chen</a>.
 <!--                    <br>-->
                     I received my B.E. degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
                     <br>
-                    I'm broadly interested in machine learning and deep learning.<br>
+                    I'm broadly interested in machine learning and deep learning. Currently I focus on generative models especially multi-modal generative models.<br>
                     I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> (Adobe), Bingchen Liu (ByteDance).
 <!--                    Here is my <a href="./CV.pdf">CV</a>.-->
                 </p>
@@ -134,7 +137,21 @@
             <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
                 <ol>
 
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Shifted Diffusion for Text-to-image Generation</text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Bingchen Liu, Yizhe Zhu, Xiao Yang, Changyou Chen, Jinhui Xu. </div>
+                        </div>
+                    </li>
+                    <br>
 
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Lafite2: Few-shot Text-to-Image Generation</text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Chunyuan Li, Changyou Chen, Jinhui Xu. </div>
+                        </div>
+                    </li>
+                    <br>
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> A Generic Approach for Enhancing GANs by Regularized Latent Optimization</text></div>
@@ -145,7 +162,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2105.04538"> Learning High-Dimensional Distributions with Latent Neural Fokker-Planck Kernels</a></text></div>
+                            <div class="title"><text id="small-caps"> Learning High-Dimensional Distributions with Latent Neural Fokker-Planck Kernels</text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
                         </div>
                     </li>
