--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Shifted Diffusion for Text-to-image Generation</text></div>
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Bingchen Liu, Yizhe Zhu, Xiao Yang, Changyou Chen, Jinhui Xu. </div>
                         </div>
                     </li>
