--- a/index.html
+++ b/index.html
@@ -139,10 +139,14 @@
 
                     <li>
                         <div class="paper">
+                            <div class="abs_photo"><img src="./index_files/hu.jpg" width="100" height="100" align="right"></div>
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Bingchen Liu, Yizhe Zhu, Xiao Yang, Changyou Chen, Jinhui Xu. </div>
+                            <div class="abs"><i>We propose a method termed Corgi, which introduces shifted diffusion. And yes, I do have a Corgi.</i></div>
+
                         </div>
                     </li>
+
                     <br>
 
                     <li>
