--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022; ICML 2021, 2022; ICLR 2022, 2023; CVPR 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022; ICML 2021, 2022; ICLR 2022, 2023; CVPR 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022; ACL 2023;
                     <li>
                         Journal Reviewer: IEEE TNNLS;
                     </li>
