--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>
                     I will join Adobe Research as a Research Scientist.
                 </p>
-                <p> I am currently a Ph.D. student (Fall 2018 - present) co-advised by
+                <p> I am currently a Ph.D. candidate (Fall 2018 - Spring 2023) co-advised by
                     <a href="https://cse.buffalo.edu/~jinhui/" target="_blank">Prof. Jinhui Xu</a> and
                     <a href="https://cse.buffalo.edu/~changyou/" target="_blank">Prof. Changyou Chen</a>.
 <!--                    <br>-->
@@ -47,6 +47,19 @@
 
             <div class="section-heading"><h2>Publications</h2></div>
                 <ol>
+
+                    <li>
+                        <div class="paper">
+                            <div class="abs_photo"><img src="./index_files/hu.jpg" width="100" height="100" align="right"></div>
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text></div> (code and pre-trained models will be available soon)
+                            <div class="authors"> <b>Yufan Zhou</b>, Bingchen Liu, Yizhe Zhu, Xiao Yang, Changyou Chen, Jinhui Xu. </div>
+                            <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2023.</div>
+                            <div class="abs"><i>We propose a method termed Corgi, which introduces shifted diffusion. And yes, I do have a Corgi.</i></div>
+
+                        </div>
+                    </li>
+                    <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text>  (<a href="https://github.com/drboog/Lafite">code</a>) </div>
@@ -139,18 +152,6 @@
 
                     <li>
                         <div class="paper">
-                            <div class="abs_photo"><img src="./index_files/hu.jpg" width="100" height="100" align="right"></div>
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Bingchen Liu, Yizhe Zhu, Xiao Yang, Changyou Chen, Jinhui Xu. </div>
-                            <div class="abs"><i>We propose a method termed Corgi, which introduces shifted diffusion. And yes, I do have a Corgi.</i></div>
-
-                        </div>
-                    </li>
-
-                    <br>
-
-                    <li>
-                        <div class="paper">
                             <div class="title"><text id="small-caps"> Lafite2: Few-shot Text-to-Image Generation</text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Chunyuan Li, Changyou Chen, Jinhui Xu. </div>
                         </div>
@@ -193,7 +194,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022; ICML 2021, 2022; ICLR 2022, 2023; CVPR 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022; ACL 2023;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022; ICML 2021, 2022, 2023; ICLR 2022, 2023; CVPR 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022; ACL 2023;
                     <li>
                         Journal Reviewer: IEEE TNNLS;
                     </li>
