--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text></div> (code and pre-trained models will be available soon)
                             <div class="authors"> <b>Yufan Zhou</b>, Bingchen Liu, Yizhe Zhu, Xiao Yang, Changyou Chen, Jinhui Xu. </div>
                             <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2023.</div>
-                            <div class="abs"><i>We propose a method termed Corgi, which introduces shifted diffusion model that can better generate image embeddings from text inside CLIP multimodal embedding space. It benefits applications including both standard and language-free text-to-image generation. And yes, I do have a Corgi.</i></div>
+                            <div class="abs"> <font color="#00539CFF">We propose a method termed Corgi, which introduces shifted diffusion model that can better generate image embeddings from text inside CLIP multimodal embedding space. It benefits applications including both standard and language-free text-to-image generation. And yes, I do have a Corgi.</font> </i></div>
                         </div>
                     </li>
                     <br>
@@ -64,7 +64,7 @@
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text>  (<a href="https://github.com/drboog/Lafite">code</a>) </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun. </div>
                             <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2022.</div>
-                            <div class="abs"><i>Our proposed work, Lafite, is the first work which can successfully train text-to-image generation model with image-only dataset.</i></div>
+                            <div class="abs"><<font color="#00539CFF">>Our proposed work, Lafite, is the first work which can successfully train text-to-image generation model with image-only dataset.</font></i></div>
                         </div>
                     </li>
                     <br>
