--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text>  (<a href="https://github.com/drboog/Lafite">code</a>) </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun. </div>
                             <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2022.</div>
-                            <div class="abs"><<font color="#00539CFF">>Our proposed work, Lafite, is the first work which can successfully train text-to-image generation model with image-only dataset.</font></i></div>
+                            <div class="abs"><font color="#00539CFF">Our proposed work, Lafite, is the first work which can successfully train text-to-image generation model with image-only dataset.</font></i></div>
                         </div>
                     </li>
                     <br>
