--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li>
                         <div class="paper">
                             <div class="abs_photo"><img src="./index_files/hu.jpg" width="100" height="100" align="right"></div>
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text></div> (<a href="https://github.com/drboog/Shifted_Diffusion">code and pre-trained models</a>)
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text> (<a href="https://github.com/drboog/Shifted_Diffusion">code</a>)</div>
                             <div class="authors"> <b>Yufan Zhou</b>, Bingchen Liu, Yizhe Zhu, Xiao Yang, Changyou Chen, Jinhui Xu. </div>
                             <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2023.</div>
                             <div class="abs"> <font color="#00539CFF">We propose a method termed Corgi, which can better generate image embeddings from text inside multimodal embedding space. It benefits both standard and language-free text-to-image generation. And yes, I do have a Corgi.</font> </i></div>
